finished work with loading vales into react-seletors,server now handles both request to update just email,location,lang or else new password, @TODO: fix multi select height that's getting adjusted to both side up and down when there's lots of elements in array,and handle mobile viewport to make it look nice on mobile

--- a/src/components/pages/Dashboard.scss
+++ b/src/components/pages/Dashboard.scss
@@ -14,7 +14,6 @@
   .dashboard-content {
     display: flex;
     justify-content: center;
-    padding: 100px;
     padding-bottom: 0;
     width: 100%;
   }
